v7_大部分描述微调

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2021-01-10 17:25:57
+ * @LastEditTime: 2021-01-11 20:16:40
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -57,40 +57,36 @@
 
                 <div id="skill" class="sectionContent">
                     <ul style="list-style: none">
-                        <li><progress value="70" max="100"></progress>
-                            了解Shell语言, 熟悉CentOS,Debian等Linux操作系统</li>
+                        <li><progress value="80" max="100"></progress>
+                            熟悉Shell; 熟悉Python, 了解其Django框架, 有一定的开发经验</li>
+                        <li>
+                        <li><progress value="75" max="100"></progress>
+                            熟悉CentOS, Debian, Ubuntu等Linux操作系统</li>
                         <li>
                             <progress value="75" max="100"></progress>
-                            熟悉Python语言, 有一定的开发经验.
-                        </li>
-                        <li>
-                            <progress value="70" max="100"></progress>
                             熟悉Docker容器, Kubernetes容器编排技术.
                         </li>
                         <!-- <li><progress value="65" max="100"></progress>
-                            熟悉Ansible自动化运维配置管理工具
-                        </li> -->
-                        <!-- <li><progress value="65" max="100"></progress>
 						了解分布式存储Ceph的原理及其配置维护
-					</li> -->
+					    </li> -->
                         <li>
-                            <progress value="65" max="100"></progress>
-                            了解数据库原理, 具备对MySQL, Redis基本配置与维护能力.
+                            <progress value="70" max="100"></progress>
+                            了解数据库原理, 具备对MySQL, Redis配置与维护能力.
+                        </li>
+                        <li>
+                            <progress value="70" max="100"></progress>
+                            熟悉Ansible, Git, Jenkins等自动化工具的使用.
+                        </li>
+                        <li>
+                            <progress value="70" max="100"></progress>
+                            了解Prometheus, Grafana以及Zabbix等监控可示化工具的配置以及使用.
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
-                            了解Ansible, Git, Jenkins等自动化工具的使用.
-                        </li>
-                        <li>
-                            <progress value="65" max="100"></progress>
-                            了解Prometheus, Grafana监控可示化工具的配置以及使用.
-                        </li>
-                        <li>
-                            <progress value="60" max="100"></progress>
                             了解Nginx, HAproxy, KeepAlived等中间件的部署, 配置.
                         </li>
                         <li>
-                            <progress value="60" max="100"></progress>
+                            <progress value="65" max="100"></progress>
                             有公有云使用经验, 如阿里, 腾讯云等
                         </li>
                         <li>&nbsp;</li>
@@ -105,18 +101,18 @@
 
                 <div class="sectionContent">
                     <article>
-                        <h2>卓望数码; 运维工程师(校招); 2018.12 - ?</h2>
+                        <h2>卓望数码(移动子公司); 运维工程师(校招); 2018.12 - ?</h2>
                         <!-- <p class="subDetails">2018.12 - ? </p> -->
                         <p>参与了广东移动-融合云, 集运-权益平台等几个项目的维护</p>
                     </article>
 
-                    <!-- <article>
+                    <article>
                         <h2>广州银行信用卡中心; 信息安全实习生; 2018.09 - 2018.12</h2>
                         <p>
                             协助信息安全专员对内部web系统进行渗透测试,对系统的上线,迭代进行审核;
                             使用各信息安全工具,分析监控日志,进行日常维护.
                         </p>
-                    </article> -->
+                    </article>
                 </div>
                 <div class="clear"></div>
             </section>
@@ -138,18 +134,17 @@
                             主要技术栈: Java, Docker, K8S, MySQL, Grafana等. 个人工作内容如下:<br>
                             1. 负责CI/CD流程, Dockerfile的模板编写, 以及权益平台的版本部署. <br>
                             2. 负责部分已拆分迁移K8S平台的权益超市版本部署. <br>
-                            3. 维护平台操作系统, 保证容器应用的稳定运行 <br>
-                            4. 独立完成自动化监控输出: 编写Python代码, 通过selenium操作Chrome获取JS渲染后的Grafana页面数据, 按需定时邮件输出监控内容, 无需人工介入.
-                            <br>
-                            5. 负责数据库的基本维护以及SQL语句审批执行等. <br>
-                            6. 其它工作: 编写, 维护系统脚本; 配合开发核查日志解决异常业务订单; 系统,容器告警以及业务告警处理等.
+                            3. 维护权益平台操作系统以及容器应用, 保障服务稳定运行. <br>
+                            4. 独立完成自动化监控输出: 通过Python库: Selenium操作Chrome浏览器获取JS渲染后的Grafana页面数据, 按需自动邮件输出监控内容.<br>
+                            5. 负责数据库的维护, 备份以及开发SQL审批执行等. <br>
+                            6. 其它工作: 配合开发核查日志解决异常业务订单; 系统,容器告警以及业务告警处理等.
                         </p>
                     </article>
                     <article>
                         <h2>广东网优项目, 时间: 2019.11, 已停止</h2>
                         <p>
                             该项目使用到的技术栈有: K8S, Docker, Ceph等. <br>
-                            在该项目中, 我参与了K8S集群的高可用部署; ETCD数据库的数据备份与恢复; 挂载Ceph为后端存储等;
+                            在该项目中, 我参与了K8S集群的高可用部署; ETCD数据库的数据备份与恢复; 部署Ceph为后端存储等;
                             项目外, 个人自行学习Docker, K8S相关原理, 了解其组件构成与运行. <br>
                             Docker方面: 学习相关命令的使用, 了解镜像的构成原理, Dockerfile文件的编写等; <br>
                             K8S方面: 了解其组件构成以及使用,如Pod, 控制器的部署; 服务发现; 持久卷的配置与使用;
@@ -163,7 +158,6 @@
                             所使用到的技术栈有: VSphere, VRops等; 工作内容如下: <br>
                             1. 参与数量1千以上的物理服务器集群的日常维护, 保障服务器集群的稳定运作.<br>
                             2. 保障VSphere平台的稳定使用, 及时响应客户报障, 保证VPS的可用性.<br>
-                            3. 根据需求编写PowerShell或Python脚本, 对工作内容优化.<br>
                         </p>
                     </article>
                 </div>
@@ -183,12 +177,13 @@
                         <h2> </h2>
                         <p>
                             缺点: 工作履历不长, 目前实践还不够丰富;<br>
-                            优点: 有一定的学习钻研心, 接受新技术, 遇到问题能通过google或官方文档去学习, 解决; <br>
+                            优点: 乐于尝试新事物, 有很好的技术敏感度;<br>
+                            具有很强的解决能力, 遇到问题能通过google或官方文档去学习, 解决; <br>
                             目前也在不断提高自己的技术与工作能力. <br>
                             <br>
                         </p>
                         <!-- <h2>如需<a href="https://gitee.com/erythron/pdf_resume/raw/master/resume.pdf"">PDF版</a>麻烦点击下载另存; 感谢您的浏览. </h2> -->
-                        <p>END, 感谢您的查看. </p>
+                        <p>END, 感谢您查看我的网页简历. </p>
                     </article>
                 </div>
                 <div class=" clear">
