--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2021-01-11 20:16:40
+ * @LastEditTime: 2021-01-14 14:00:13
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -26,14 +26,15 @@
         <div class="mainDetails">
             <div id="headshot" class="quickFade">
                 <img src="info.jpg" alt="erythron" />
-                <p class="subDetails">↑ 网页版地址 ↑</p>
+                <p class="subDetails">↑网页版地址↑</p>
             </div>
 
             <div id="name">
                 <h1 class="quickFade delayTwo">郑卓文</h1>
                 <h4 class="quickFade delayThree">求职意向:容器, 系统运维</h2>
-                    <h4 class="quickFade delayThree">状态: 在职</h2>
-                        <h4 class="quickFade delayThree">工作经验: 2年</h2>
+                <h4 class="quickFade delayThree">状态: 在职</h2>
+                <h4 class="quickFade delayThree">工作经验: 2年</h2>
+                <h4 class="quickFade delayThree">到岗时间: 年后</h2>
             </div>
 
             <div id="contactDetails" class="quickFade delayFour">
@@ -43,6 +44,7 @@
                     <li>专业: 网络技术系</li>
                     <li>邮箱: erythron@qq.com</li>
                     <li>手机: 13124960367</li>
+                    <li>QQ||微信: 1773990085</li>
                 </ul>
             </div>
             <div class="clear"></div>
