修改到岗时间

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2021-01-20 15:13:40
+ * @LastEditTime: 2021-03-02 16:27:27
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -32,9 +32,9 @@
             <div id="name">
                 <h1 class="quickFade delayTwo">郑卓文</h1>
                 <h4 class="quickFade delayThree">求职意向:容器, 系统运维</h2>
-                <h4 class="quickFade delayThree">状态: 在职</h2>
-                <h4 class="quickFade delayThree">工作经验: 2年</h2>
-                <h4 class="quickFade delayThree">到岗时间: 年后</h2>
+                    <h4 class="quickFade delayThree">状态: 在职</h2>
+                        <h4 class="quickFade delayThree">工作经验: 2年</h2>
+                            <h4 class="quickFade delayThree">到岗时间: 2-3周</h2>
             </div>
 
             <div id="contactDetails" class="quickFade delayFour">
