超市项目内容大修改

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2021-03-02 16:27:27
+ * @LastEditTime: 2021-04-22 11:04:55
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -81,7 +81,7 @@
                         </li>
                         <li>
                             <progress value="70" max="100"></progress>
-                            了解Prometheus, Grafana以及Zabbix等监控可示化工具的配置以及使用.
+                            了解Prometheus, Grafana等监控可示化工具对微服务的配置以及使用.
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
@@ -103,7 +103,7 @@
 
                 <div class="sectionContent">
                     <article>
-                        <h2>卓望数码(移动子公司); 运维工程师(校招); 2018.12 - ?</h2>
+                        <h2>卓望数码(移动子公司); 运维工程师(校招); 2018.12 - 2021.03</h2>
                         <!-- <p class="subDetails">2018.12 - ? </p> -->
                         <p>参与了广东移动-融合云, 集运-权益平台等几个项目的维护</p>
                     </article>
@@ -128,18 +128,20 @@
                     <article>
                         <h2>
                             <a href="https://dev.coc.10086.cn/coc3/market-web/coc3-market-web/#/home" target='_BLANK'>
-                                权益平台&权益超市</a>, 时间: 2019.12 - ?
+                                权益平台&权益超市</a>, 时间: 2019.12 - 2021.03
                         </h2>
                         <p>
                             权益平台&权益超市为移动的权益投放平台和消费商城; <br>
-                            平台承担号卡权益下发, 商城则投放在移动手机营业厅, 微信公众号等, 两者已拆分;<br>
+                            两者均为微服务架构: 权益平台为Docker搭建, 超市为K8S搭建;<br>
                             主要技术栈: Java, Docker, K8S, MySQL, Grafana等. 个人工作内容如下:<br>
-                            1. 负责CI/CD流程, Dockerfile的模板编写, 以及权益平台的版本部署. <br>
-                            2. 负责部分已拆分迁移K8S平台的权益超市版本部署. <br>
-                            3. 维护权益平台操作系统以及容器应用, 保障服务稳定运行. <br>
-                            4. 独立完成自动化监控输出: 通过Python库: Selenium操作Chrome浏览器获取JS渲染后的Grafana页面数据, 按需自动邮件输出监控内容.<br>
-                            5. 负责数据库的维护, 备份以及开发SQL审批执行等. <br>
-                            6. 其它工作: 配合开发核查日志解决异常业务订单; 系统,容器告警以及业务告警处理等.
+                            1. 负责CI/CD流程, Dockerfile的模板编写, 以及两平台的版本部署等工作. <br>
+                            2. 维护权益平台操作系统以及容器应用, 保障服务稳定运行. <br>
+                            3. 一些自动化运维脚本编写以及维护, 比如<a
+                                href="https://gitee.com/erythron/ops-script/blob/master/grafana_monitor_report_by_selenium.py"
+                                target="_BLANK">自动日报输出</a>: 通过Python库Selenium操作Chrome浏览器获取渲染后的Grafana页面数据,
+                            再邮件输出监控内容.<br>
+                            4. 负责数据库的维护, 备份以及开发SQL审批执行等. <br>
+                            5. 其它工作: 配合开发核查日志解决异常业务订单; 系统,容器告警以及业务告警处理等.
                         </p>
                     </article>
                     <article>
@@ -196,7 +198,7 @@
 			<div class="sectionTitle">
 				<h1></h1>
 			</div>
-			
+
 			<div class="sectionContent">
 				<article>
 					<h2></h2>
