二维码下面的文字说明稍微改了下

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2021-04-22 11:04:55
+ * @LastEditTime: 2021-04-27 09:31:11
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -26,7 +26,7 @@
         <div class="mainDetails">
             <div id="headshot" class="quickFade">
                 <img src="info.jpg" alt="erythron" />
-                <p class="subDetails">↑网页版地址↑</p>
+                <p style="font-size:10px;">↑ 网页链接 ↑</p>
             </div>
 
             <div id="name">
