--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2022-02-14 21:10:18
+ * @LastEditTime: 2022-02-15 21:13:16
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -40,7 +40,7 @@
             <div id="contactDetails" class="quickFade delayFour">
                 <ul>
                     <li>学校: 广州大学华软软件学院</li>
-                    <li>学历: 统招本科(2019届)</li>
+                    <li>学历: 全日制本科(2019届)</li>
                     <li>专业: 网络技术系</li>
                     <li>邮箱: erythron@outlook.com</li>
                     <li>手机: 17199922057</li>
@@ -54,15 +54,20 @@
             <section>
                 <div class="sectionTitle">
                     <h1>证书</h1>
+                </div>
+                <div id="skill" class="sectionContent">
+                    <h4>CKA(<a href="https://www.cncf.io/certification/cka/">K8s管理员</a>)&emsp;&emsp;CET-4</h4>
+                    <h4>&nbsp;</h4>
+                </div>
+                <div class="clear"></div>
+            </section>
+            <section>
+                <div class="sectionTitle">
                     <h1>技能</h1>
                 </div>
 
                 <div id="skill" class="sectionContent">
                     <ul style="list-style: none">
-                        <li>
-                            <progress value="100" max="100"></progress>
-                            <strong>证书: CKA(K8s管理员);  CET4</strong>
-                        </li>
                         <li>
                             <progress value="80" max="100"></progress>
                             熟悉Docker容器, K8s容器编排技术
@@ -78,7 +83,7 @@
                         </li>
                         <li>
                             <progress value="70" max="100"></progress>
-                            熟悉ES的部署配置, 以及使用logstash进行日志过滤.
+                            熟悉ES的部署配置, logstash过滤规则的编写.
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
@@ -86,6 +91,10 @@
                         </li>
                         <li>
                             <progress value="60" max="100"></progress>
+                            了解Nginx, KeepAlived, Zookeeper, Kafka等中间件的部署, 配置, 维护.
+                        </li>
+                        <li>
+                            <progress value="55" max="100"></progress>
                             了解数据库原理, 具备对MySQL, Redis配置与维护能力.
                         </li>
                         <li>&nbsp;</li>
@@ -101,30 +110,30 @@
 
                 <div class="sectionContent">
                     <article>
-                        <h2>2021.03 - ?    广东亿迅科技 - 云平台运维 </h2>
+                        <h2>2021.03 - ?    广东亿迅科技(邮电) - 云平台运维 </h2>
                         <p>
                             1. 公司各资源池自研K8s故障处理. <br>
                             2. 新资源池上线服务器初始化, 各应用组件的安装部署. <br>
-                            3. 其它: ES集群维护; 组件安全基线整改; 参与组件容器化部署; 维护项目文档等.
+                            3. 其它: ES集群维护; Ansible剧本编写; 参与组件容器化部署; 组件安全基线整改; 维护项目文档等.
                         </p>
                     </article>
                     <article>
                         <h2>2018.12 - 2021.03    卓望数码技术 - 系统运维 </h2>
                         <p>
                             1. 保障权益平台(Docker)&权益超市(K8s)两套系统的稳定运行, 处理异常业务. <br>
-                            2. 业务Dockerfile文件的编写, CI/CD上线部署等. <br>
-                            3. 其它: 编写脚本, 自动化常用的工作流程; 配合研发SQL执行; 监控系统, 日志仓库维护; 业务日报编写等.
+                            2. Dockerfile文件的编写, 业务上线部署等. <br>
+                            3. 其它: 编写脚本, 自动化常用的工作流程; 配合研发SQL执行; 监控系统, 日志仓库维护; 业务日报编写等.<br>
+                            4. 广东移动 VMware vSphere平台及ESXI服务器维护.
                         </p>
                     </article>
 
 
-                    <!-- <article>
-                        <h2>广州银行信用卡中心; 信息安全实习生; 2018.09 - 2018.12</h2>
+                    <article>
+                        <h2>2018.09 - 2018.12    广州银行信用卡中心 - 信息安全实习生 </h2>
                         <p>
                             协助信息安全专员对内部web系统进行渗透测试,对系统的上线,迭代进行审核;
-                            使用各信息安全工具,分析监控日志,进行日常维护.
                         </p>
-                    </article> -->
+                    </article>
                 </div>
                 <div class="clear"></div>
             </section>
@@ -136,26 +145,26 @@
 
                 <div class="sectionContent">
                     <article>
-                        <h2>storm容器化部署 - 亿迅</h2>
+                        <h2>Storm容器化部署 - 亿迅</h2>
                         <p>
-                            &emsp;&emsp;小组接到需求对部分原生组件容器化, 使用helm批量部署并对接到自研K8s. 个人分配到的组件是storm. 因官方chart仓库中已存在strom包, 在此基础上做二次修改. <br>
-                            &emsp;&emsp;难点: 原有包的持久化存储仅使用了PVC进行持久化存储; 自研K8s部署时需传递定制参数. 仅修改value配置不能符合要求. 花费了一定时间学习了Helm的编写, 直接修改包中的statefulset使用SC进行持久化; 定制参数则在value文件中追加定义, 并修改相对应的模板, 完成任务.
+                            &emsp;&emsp;小组接到需求对部分原生组件容器化, 使用helm批量部署并对接到自研K8s. 个人分配到的组件是Storm. 因官方chart仓库中已存在Storm包, 在此基础上做二次修改. <br>
+                            &emsp;&emsp;难点: 原有包的持久化存储仅使用了PVC进行持久化存储; 自研K8s部署时需传递定制参数, 仅修改value配置不能符合要求. 花费了一定时间学习了Helm的编写, 直接修改包中的statefulset使用SC进行持久化; 定制参数则在value文件中追加定义, 并修改相对应的模板, 完成任务.
                         </p>
                     </article>
                     <article>
                         <h2>ELK日志收集 - 亿迅</h2>
                         <p>
                             &emsp;&emsp;因业务需要从日志进行检索关键信息, 按需求部署ELK系统. 业务系统服务器上部署filebeat, 收集日志到logstash, 过滤后传输到es集群. 为防止logstash压力过大, filebeat到logstash的链路中引入Kafka做消息缓存. <br>
-                            &emsp;&emsp;个人参与了该项目中全部流程, 负责了部分日志的filebeat收集, logstash过滤规则, kafka topic管理等.</p>
+                            &emsp;&emsp;个人参与了该项目中全部流程, 负责对部分日志的filebeat收集, 编写logstash过滤规则, kafka topic管理等.</p>
                     </article>
                     <article>
                         <h2>定时上报业务监控自动化脚本 - 卓望</h2>
                         <p>
-                            &emsp;&emsp;因权益超市部分日期的业务监控信息需每隔1小时就要上报一次, 监控信息从Grafana中获取; 通过Python库Selenium操作Chrome浏览器获取到网页代码, 通过xpath过滤出关键信息, 再邮件输出监控内容. 后续改造为自动日报输出 <a
+                            &emsp;&emsp;因权益超市部分日期的业务监控信息需每隔1小时就要上报一次, 信息从Grafana中获取再手动发送; 研究通过Python库Selenium操作Chrome浏览器Headless模式登录到Grafana, 截图并获取到网页代码, 通过xpath过滤出关键信息, 再邮件输出监控内容. 脚本后续还改造为自动日报输出. <a
                             href="https://gitee.com/erythron/ops-script/blob/master/grafana_monitor_report_by_selenium.py"
                             target="_BLANK">代码链接</a><br>
 
-                            &emsp;&emsp;难点: Grafana因安全需求, 需开启账号密码认证. 脚本无法通过点击登录去获取数据;  最后在grafana中配置header, 反向代理插入header, 通过安全认证, 拿到数据.
+                            &emsp;&emsp;难点: 1. 脚本一开始是直接使用requests库去链接网页, 后发现数据需无头浏览器执行JS后才能获取到; 2. Grafana因安全需求, 需开启账号密码认证. 脚本无法通过点击登录去获取数据;  最后在grafana中配置header, 部署Nginx做反向代理插入header, 通过安全认证, 获取到数据.
                         </p>
                     </article>
 
