--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2022-02-15 21:13:16
+ * @LastEditTime: 2022-02-15 22:04:31
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -161,7 +161,7 @@
                         <h2>定时上报业务监控自动化脚本 - 卓望</h2>
                         <p>
                             &emsp;&emsp;因权益超市部分日期的业务监控信息需每隔1小时就要上报一次, 信息从Grafana中获取再手动发送; 研究通过Python库Selenium操作Chrome浏览器Headless模式登录到Grafana, 截图并获取到网页代码, 通过xpath过滤出关键信息, 再邮件输出监控内容. 脚本后续还改造为自动日报输出. <a
-                            href="https://gitee.com/erythron/ops-script/blob/master/grafana_monitor_report_by_selenium.py"
+                            href="https://raw.githubusercontent.com/erythrun/OpsScript/master/grafana_monitor_report_by_selenium.py"
                             target="_BLANK">代码链接</a><br>
 
                             &emsp;&emsp;难点: 1. 脚本一开始是直接使用requests库去链接网页, 后发现数据需无头浏览器执行JS后才能获取到; 2. Grafana因安全需求, 需开启账号密码认证. 脚本无法通过点击登录去获取数据;  最后在grafana中配置header, 部署Nginx做反向代理插入header, 通过安全认证, 获取到数据.
