--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2022-02-15 22:04:31
+ * @LastEditTime: 2022-02-16 20:47:54
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -24,10 +24,10 @@
 <body id="top">
     <div id="cv" class="instaFade">
         <div class="mainDetails">
-            <!-- <div id="headshot" class="quickFade">
-                <img src="info.jpg" alt="erythron" />
-                <p style="font-size:10px;">↑ 网页地址 ↑</p>
-            </div> -->
+            <div id="headshot" class="quickFade">
+                <img src="qrcode_erythrun.github.io.png" alt="erythron" />
+                <p style="font-size:12px;"> <a href="https://erythrun.github.io/resume/">网页版链接</a> </p>
+            </div>
 
             <div id="name">
                 <h1 class="quickFade delayTwo">郑卓文</h1>
