去除二维码, html to pdf 横版不太好

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!--
  * @Author: Athrun.Zala
- * @Email: erythron@qq.com
+ * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2022-02-16 20:47:54
+ * @LastEditTime: 2022-02-16 21:36:49
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -24,10 +24,6 @@
 <body id="top">
     <div id="cv" class="instaFade">
         <div class="mainDetails">
-            <div id="headshot" class="quickFade">
-                <img src="qrcode_erythrun.github.io.png" alt="erythron" />
-                <p style="font-size:12px;"> <a href="https://erythrun.github.io/resume/">网页版链接</a> </p>
-            </div>
 
             <div id="name">
                 <h1 class="quickFade delayTwo">郑卓文</h1>
@@ -35,7 +31,13 @@
                 <h4 class="quickFade delayThree">状态: 在职</h4>
                 <h4 class="quickFade delayThree">工作经验: 3年</h4>
                 <h4 class="quickFade delayThree">到岗时间: 2-3周</h4>
+                <h4 class="quickFade delayThree">到岗时间: 2-3周</h4>
             </div>
+
+            <!-- <div id="headshot" class="quickFade">
+                <img src="qrcode_erythrun.github.io.png" alt="erythron" />
+                <p style="font-size:12px;"> <a href="https://erythrun.github.io/resume/">网页版链接</a> </p>
+            </div> -->
 
             <div id="contactDetails" class="quickFade delayFour">
                 <ul>
@@ -224,6 +226,7 @@
                         <p>
                             乐于尝试新事物, 遇到问题能通过google或官方文档去学习, 解决;<br>
                             不断提高自己的技术与工作能力中. <br>
+                            如查看网页版简历请访问 <a href="https://erythrun.github.io/resume/">https://erythrun.github.io/resume/</a>
                         </p>
                     </article>
                 </div>
