尾部追加链接

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2022-02-15 22:04:31
+ * @LastEditTime: 2022-02-16 21:42:16
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -224,6 +224,7 @@
                         <p>
                             乐于尝试新事物, 遇到问题能通过google或官方文档去学习, 解决;<br>
                             不断提高自己的技术与工作能力中. <br>
+                            网页版简历请访问链接 <a href="https://erythrun.github.io/resume/">https://erythrun.github.io/resume/</a>
                         </p>
                     </article>
                 </div>
