增加QQ; 细节修正

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2022-02-16 21:50:00
+ * @LastEditTime: 2022-02-17 20:17:58
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -45,7 +45,7 @@
                     <li>专业: 网络技术系</li>
                     <li>邮箱: erythron@outlook.com</li>
                     <li>手机: 17199922057</li>
-                    <li>微信: 1773990085</li>
+                    <li>QQ||微信: 1773990085</li>
                 </ul>
             </div>
             <div class="clear"></div>
@@ -71,7 +71,7 @@
                     <ul style="list-style: none">
                         <li>
                             <progress value="80" max="100"></progress>
-                            熟悉Docker容器, K8s容器编排技术
+                            熟悉Docker容器, K8s容器编排技术.
                         </li>
                         <li><progress value="80" max="100"></progress>
                             熟悉Python, 了解其Django框架.</li>
@@ -115,7 +115,7 @@
                         <p>
                             1. 公司各资源池自研K8s故障处理. <br>
                             2. 新资源池上线服务器初始化, 各应用组件的安装部署. <br>
-                            3. 其它: ES集群维护; Ansible剧本编写; 参与组件容器化部署; 组件安全基线整改; 维护项目文档等.
+                            3. 其它: ES集群维护; 组件安全基线整改; Ansible剧本编写; 维护项目文档等.
                         </p>
                     </article>
                     <article>
@@ -124,7 +124,7 @@
                             1. 保障权益平台(Docker)&权益超市(K8s)两套系统的稳定运行, 处理异常业务. <br>
                             2. Dockerfile文件的编写, 业务上线部署等. <br>
                             3. 其它: 编写脚本, 自动化常用的工作流程; 配合研发SQL执行; 监控系统, 日志仓库维护; 业务日报编写等.<br>
-                            4. 广东移动 VMware vSphere平台及ESXI服务器维护.
+                            4. 广东移动VMware vSphere平台及ESXI服务器维护.
                         </p>
                     </article>
 
