--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2022-02-17 20:17:58
+ * @LastEditTime: 2022-02-20 21:22:34
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -74,7 +74,7 @@
                             熟悉Docker容器, K8s容器编排技术.
                         </li>
                         <li><progress value="80" max="100"></progress>
-                            熟悉Python, 了解其Django框架.</li>
+                            熟悉Python, 了解其Django框架(曾独立完成了一个demo bbs, <a href="https://github.com/erythrun/demo-warthunder-bbs">仓库链接</a>)</li>
                         <li>
                         <li><progress value="75" max="100"></progress>
                             熟悉CentOS, Ubuntu, Debian操作系统.</li>
