网优项目细节修改

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2022-02-28 20:27:27
+ * @LastEditTime: 2022-03-02 22:24:21
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -80,7 +80,7 @@
                             熟悉CentOS, Ubuntu, Debian操作系统.</li>
                         <li>
                             <progress value="70" max="100"></progress>
-                            熟悉Ansible, Git, Jenkins等工具的使用.
+                            熟悉Ansible, Jenkins, Gitlab等自动化工具的使用.
                         </li>
                         <li>
                             <progress value="70" max="100"></progress>
@@ -173,7 +173,6 @@
                         <p>
                             该项目使用到的技术栈有: K8S, Docker, Ceph等. <br>
                             在该项目中, 我参与了K8S集群的高可用部署; ETCD数据库的数据备份与恢复; 部署Ceph为后端存储等.
-                            于该项目中, 个人学习Docker, K8S相关原理, 了解其组件构成与运行. <br>
                         </p>
                     </article>
                     <!-- <article>
